--- a/app/src/main/res/layout/activity_item_layout.xml
+++ b/app/src/main/res/layout/activity_item_layout.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".AdminProdi">
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/background_light"
@@ -21,6 +21,7 @@
         </androidx.appcompat.widget.AppCompatImageView>
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Prodi"
@@ -30,5 +31,24 @@
         </androidx.appcompat.widget.AppCompatTextView>
 
     </androidx.appcompat.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycle"
+            android:background="@color/cardview_light_background"
+            android:layout_width="match_parent"
+            android:padding="14pt"
+            android:scrollbars="vertical"
+            android:elevation="0dp"
+            android:layout_height="match_parent" />
+
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
