--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -94,10 +94,11 @@
             android:id="@+id/logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/dosen"
+            android:layout_below="@id/mahasiswa"
             android:src="@drawable/logout"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="15pt"
-            android:layout_marginLeft="15pt"/>
+            android:layout_marginRight="15pt"/>
 
         <ImageView
             android:id="@+id/kelas"
@@ -107,14 +108,6 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15pt" />
 
-        <ImageView
-            android:id="@+id/pair"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/pair"
-            android:layout_below="@id/kelas"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15pt" />
 
 
         <ImageView
@@ -131,9 +124,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/mk"
-            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="15pt"
-            android:layout_below="@id/mahasiswa"
+            android:layout_below="@id/kelas"
             android:layout_marginRight="15pt"/>
     </RelativeLayout>
 
