--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="hitam">#333333</color>
     <color name="hint">#CDCDCD</color>
     <color name="putih">#ffffff</color>
+    <color name="danger">#FF6262</color>
 </resources>
