--- a/app/src/main/res/layout/activity_mahasiswa_info.xml
+++ b/app/src/main/res/layout/activity_mahasiswa_info.xml
@@ -16,6 +16,7 @@
         android:elevation="10dp">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/backbutton">
@@ -25,7 +26,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Iformation"
+            android:text="New Information"
             android:fontFamily="@font/poppins_bold"
             android:textColor="@color/text"
             android:textSize="20sp">
@@ -63,12 +64,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/important"
+            android:layout_marginLeft="20pt"
+            android:layout_marginRight="20pt"
             android:fontFamily="@font/poppins_regular"
-            android:textSize="12sp"
             android:text="Untuk mengantisipasi virus corona kuliah tatap muka dihentikan sementara waktu mulai dengan pengumuman ini dikeluarkan sampai dengan keluar pengumuman selanjutnya "
             android:textAlignment="center"
-            android:layout_marginLeft="20pt"
-            android:layout_marginRight="20pt"/>
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/dosen"
@@ -78,7 +79,7 @@
             android:fontFamily="@font/poppins_bold"
             android:textSize="14sp"
             android:layout_below="@id/info"
-            android:text="~ Mulyadi ST.M.Eng"
+            android:text="~ Dosen Pengasuh"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20pt"/>
 
